Dependencies Fix for Geospatial Algebra